--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <body>
       <h1> we are happy that you have chosen to buy from us  </h1>
       <p> we hope everything everything things goes well and that you have a happy experiance with our product <b>bold</b>
+        <img src="img_chania.jpg" alt="Flowers in Chania" width="460" height="345">
       </body>
   </html>
