--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <body>
       <h1> we are happy that you have chosen to buy from us  </h1>
       <p> we hope everything everything things goes well and that you have a happy experiance with our product <b>bold</b>
-        <img src="hhttps://wallpapercave.com/fuwp/uwp1973451.jpeg">
+        <img src="https://wallpapercave.com/fuwp/uwp1973451.jpeg">
       </body>
   </html>
