--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <h1> we are happy that you have chosen to buy from us  </h1>
       <p> we hope everything everything things goes well and that you have a happy experiance with our product <b>bold</b>
        </p>
-      
+      <hr style="width:50%;text-align:left;margin-left:0">
       <p2>
         <img src="https://wallpapercave.com/fuwp/uwp1973451.jpeg">
          </p2>
